--- a/m2.ini
+++ b/m2.ini
@@ -4,6 +4,9 @@ module = wsgi
 master = true
 processes = 5
 
+no-orphans = true
+max-requests = 1000
+
 socket = m2.sock
 chmod-socket = 660
 vacuum = true
