--- a/m2.ini
+++ b/m2.ini
@@ -12,3 +12,5 @@ chmod-socket = 660
 vacuum = true
 
 die-on-term = true
+
+NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin run-program command options
