--- a/m2.ini
+++ b/m2.ini
@@ -13,4 +13,6 @@ vacuum = true
 
 die-on-term = true
 
-NEW_RELIC_CONFIG_FILE=newrelic.ini newrelic-admin run-program command options
+enable-threads = true
+single-interpreter = true
+eval = import newrelic.agent, wsgi; application = newrelic.agent.wsgi_application()(wsgi.application)
