--- a/m2.ini
+++ b/m2.ini
@@ -4,9 +4,15 @@ stats = /tmp/stats.socket
 harakiri = 10
 
 module = wsgi
-
 master = true
-processes = 5
+
+workers = 64          # maximum number of workers
+
+cheaper-algo = spare2
+cheaper = 8           # tries to keep 8 idle workers
+cheaper-initial = 8   # starts with minimal workers
+cheaper-step = 4      # spawn at most 4 workers at once
+cheaper-idle = 60     # cheap one worker per minute while idle
 
 no-orphans = true
 max-requests = 100
@@ -16,8 +22,5 @@ socket = m2.sock
 chmod-socket = 660
 vacuum = true
 
-die-on-term = true
-
 enable-threads = true
 single-interpreter = true
-eval = import newrelic.agent, wsgi; application = newrelic.agent.wsgi_application()(wsgi.application)
