--- a/m2.ini
+++ b/m2.ini
@@ -5,6 +5,7 @@ harakiri = 10
 
 module = wsgi
 master = true
+lazy-apps = true
 
 workers = 64          # maximum number of workers
 
@@ -24,3 +25,5 @@ vacuum = true
 
 enable-threads = true
 single-interpreter = true
+
+eval = import newrelic.agent, wsgi; application = newrelic.agent.wsgi_application()(wsgi.application)
