--- a/m2.ini
+++ b/m2.ini
@@ -5,10 +5,12 @@ stats = /tmp/stats.socket
 module = wsgi
 master = true
 lazy-apps = true
+harakiri = 10
 
-workers = 32          # maximum number of workers
+workers = 64          # maximum number of workers
 
-cheaper-algo = spare2
+cheaper-algo = spare
+cheaper_overload = 5
 cheaper = 8           # tries to keep 8 idle workers
 cheaper-initial = 8   # starts with minimal workers
 cheaper-step = 4      # spawn at most 4 workers at once
